--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ box-shadow: 0 4px 10px rgba(40, 167, 69, 0.3);
 }
 
 .btn-accent:hover {
-background-color: darken(var(--accent-color), 10%);
+background-color: #23923d;
 transform: translateY(-2px);
 box-shadow: 0 6px 15px rgba(40, 167, 69, 0.4);
 text-decoration: none;
@@ -121,7 +121,7 @@ box-shadow: 0 4px 10px rgba(108, 117, 125, 0.3);
 }
 
 .btn-secondary:hover {
-background-color: darken(var(--secondary-color), 10%);
+background-color: #909dad;
 transform: translateY(-2px);
 box-shadow: 0 6px 15px rgba(108, 117, 125, 0.4);
 text-decoration: none;
@@ -515,7 +515,7 @@ box-shadow: 0 4px 10px rgba(255, 193, 7, 0.3);
 }
 
 .btn-toggle-game-mode:hover {
-background-color: darken(#ffc107, 10%);
+background-color: #e0ac00;
 box-shadow: 0 6px 15px rgba(255, 193, 7, 0.4);
 }
 
